Updated the settings.json file to allow junit in vs code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
         "res",
         "src"
     ],
-    "java.project.referencedLibraries": []
+    "java.project.referencedLibraries": [
+        "test-lib\\**\\*.jar"
+    ]
 }
