Fixed the test method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     ],
     "java.project.referencedLibraries": [
         "test-lib\\**\\*.jar"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
